Quellen zu numpy hinzugefügt

--- a/Ausarbeitung/Literatur.bib
+++ b/Ausarbeitung/Literatur.bib
@@ -239,3 +239,18 @@
     year={2011},
     organization={Thomas Telford Ltd}
 }
+
+@online{numpyAppend,
+    author = {Joe and Matt Hall and AboAmmar},
+    urldate = {2024-09-25},
+    title = {Append 2d array to 3d array},
+    url = {https://stackoverflow.com/questions/72330041/append-2d-array-to-3d-array},
+    year = {2022}
+}
+
+@online{numpyTranspose,
+    author = {{NumPy Developers}},
+    urldate = {2024-09-25},
+    title = {numpy.transpose},
+    url = {https://numpy.org/doc/2.0/reference/generated/numpy.transpose.html},
+}
