--- a/Ausarbeitung/Ausarbeitung.tex
+++ b/Ausarbeitung/Ausarbeitung.tex
@@ -1274,7 +1274,7 @@ Tag der Einreichung: \datum
 
             Da schon Veränderungen der Quadraturformel ausreichten, um den Verlauf der Eigenwerte komplett zu verändern\footnote{es reicht sogar ein Wechsel des Gerätes, welches das Programm ausführt, um unterschiedliche Ergebnisse hervorzubringen},
             werden auch andere wichtige Faktoren den Algorithmus und somit die Minimalstelle beeinflussen können.
-            
+
             Laut \cite[S. 7]{hauptteilTkachuk} hänge der Algorithmus besonders von dem Startwert $s_0$ und seinen Parametern, wie $\alpha$, ab.
 
 \chapter{Verbesserungen}
@@ -1290,7 +1290,6 @@ Tag der Einreichung: \datum
       kann in \mbox{\cite[\textit{./Verbesserung\_Trapez.py}]{github}} gesehen werden, dort wurden die Stützstellen der Trapezregel aus Kapitel \ref{sec: Programmieren} so verschoben, dass keine Stützstelle sich in der Nähe von $\lambda_a$ und $\lambda_b$ befindet}.
       Ferner sieht man anhand der Abbildungen \ref{fig: Plot_1_100_0.05}, \ref{fig: Plot_1_150_0.05} und \ref{fig: Plot_1_150_0.5},
       dass eine größere Schrittweite des Gradientenverfahrens deutlich bessere Ergebnisse hervorbringen kann.
-      Allerdings ist eine zu hohe Schrittweite nicht immer von Vorteil, sollte sich ein Schritt des Verfahrens nahe an einer Lösung des Problems befinden.
       Man sehe zudem, dass sich viele der Durchläufe mit kurzen Schrittweiten $\lambda_*$ über lange Strecken kaum verändern.
       Um dem vorzubeugen berechne die Schrittweite des Gradientenverfahrens dynamisch, wie es auch im klassischen Gradientenverfahren \cite[S. 285 f.]{optimierungBurkhard} üblich ist.
       Zuletzt sind diese langen Zeiten für Probleme mit einstelligen Freiheitsgraden nicht wünschenswert,
@@ -1299,31 +1298,30 @@ Tag der Einreichung: \datum
       \section{Verbesserte Quadraturformeln}
             Man wende sich zuerst der Verbesserung der Quadraturformel zu.
             Man erhofft sich hier, Ungenauigkeiten, die auftreten, wenn sich ein Eigenwert dem Intervallrand nähert, zu verringern, um große Sprünge in der Verteilung der Eigenwerte zu vermeiden.
-            Durch verbesserte Quadraturformeln sollen die Eigenwerte das Intervall geordnet verlassen und nicht per Zufall/ während eines Schrittes wie in Abb. \ref{fig: Plot_2_100_0.05}.
+            Durch verbesserte Quadraturformeln sollen die Eigenwerte das Intervall geordnet verlassen und nicht während eines großen Schrittes wie in Abb. \ref{fig: Plot_2_100_0.05}.
 
             Man nutze daher eine Quadraturformel, welche das Integral zwar approximiert, aber nicht an den Stellen $\lambda_a$ und $\lam_b$ ausgewertet wird.
 
-            Die einfachste Quadraturformel, die dies bewerkstelligt ist die \zitat{Mittelpunkts-Regel}\cite[S. 526]{numerikHermann}:
+            Die einfachste Quadraturformel, die dies bewerkstelligt ist die \zitat{Mittelpunkts-Regel} \cite[S. 526]{numerikHermann}:
 
             Sei dazu $\gamma_k, k=0,\dots,m-1$ wie in (\ref{def: gamma_k}), nach (\ref{eqn: Teilintegral Kurve zu Intergral normal}) gilt:
             \begin{align*}
                   \int_{\gamma_k} L(z, s)\ dz =& \int_{2\pi \frac{k}{m}}^{2\pi\frac{k+1}{m}}L(\Tilde z_0+\Tilde r\exp(it), s)i\Tilde r \exp(it)\ dt\\
                   \approx& L(\Tilde z_0+\Tilde r\exp\klammer{\frac{2\pi i}{m}(k+\frac{1}{2})}, s)i\Tilde r \klammer{\frac{2\pi i}{m}(k+\frac{1}{2})} \frac{2\pi}{m}\\
-                  =& L(z_{k+\frac{1}{2}}, s)(\Tilde z_0-z_{k+\frac{1}{2}}) \frac{2\pi i}{m}
+                  =& L(z_{k+\frac{1}{2}}, s)(\Tilde z_0-z_{k+\frac{1}{2}}) \frac{2\pi i}{m}\,,
             \end{align*}
 
             wobei die Definition $z_{k+\frac{1}{2}}:= \Tilde z_0+\Tilde r\exp(\frac{2\pi i}{m}(k+\frac{1}{2})), k=0,\dots,m$
             und die Formel der Mittelpunkts-Regel aus \cite[S. 526]{numerikHermann} verwendet wurde.
 
-            Es gilt für $J(s)$:
+            Es gilt für $J(s)$
             \begin{align}
                   J(s) =& \frac{1}{2\pi i}\sum_{k=0}^{m-1} \int_{\gamma_k} L(z, s)\ dz \approx \frac{1}{2\pi i}\sum_{k=0}^{m-1} L(z_{k+\frac{1}{2}}, s)(\Tilde z_0-z_{k+\frac{1}{2}}) \frac{2\pi i}{m}\nonumber\\
-                  =&  \frac{1}{2\pi i}\left[\frac{2\pi i}{m}\sum_{k=0}^{m-1} L(z_{k+\frac{1}{2}}, s)(\Tilde z_0-z_{k+\frac{1}{2}})\right]=:J^*_{\text{Mittel}}(s)\label{def: JSternMittel}
+                  =&  \frac{1}{2\pi i}\left[\frac{2\pi i}{m}\sum_{k=0}^{m-1} L(z_{k+\frac{1}{2}}, s)(\Tilde z_0-z_{k+\frac{1}{2}})\right]=:J^*_{\text{Mittel}}(s)\,.\label{def: JSternMittel}
             \end{align}
 
-            Wobei wieder die Faktoren vor der Summe nicht gekürzt wurden, da der erste Faktor von der Anwendung des Residuensatzes stammt
-            und der zweite Faktor ein Teil der Quadraturformel ist
-            \footnote{falls man die Faktoren kürzen würde, erhält man die Stützstellen $z_k$ und Gewichte $\w_k$ aus \cite[S. 128]{grundlageFutamura},
+            Die Faktoren vor der Summe wurden wieder nicht gekürzt, da der erste Faktor von der Anwendung des Residuensatzes stammt
+            und der zweite Faktor ein Teil der Quadraturformel ist\footnote{falls man die Faktoren kürzen würde, erhält man die Stützstellen $z_k$ und Gewichte $\w_k$ aus \cite[S. 128]{grundlageFutamura},
             das Kürzen würde die Berechnung zwar beschleunigen, aber die Berechnung der $J^*$ wurde in \cite[\textit{./Funktionen.py}]{github} so implementiert, dass jede Quadraturformel genutzt werden kann}.
 
             Durch die Verwendung dieser Quadraturformel erhält man folgende Ergebnisse:
@@ -1370,7 +1368,7 @@ Tag der Einreichung: \datum
 
             Der zweite Eigenwert verlässt in Abb. \ref{fig: Plot_1_100_0.05_Mittelpunkt} langsam das Intervall und hat keine Probleme die Intervallgrenze zu überqueren.
             Der Verlauf der Eigenwertzählungen ist hier zwar nicht abgebildet, aber an der Abwesenheit von Sprüngen kann man schließen, dass die approximiere gewichtete Eigenwertzählung die genaue hier überall gut approximiert. 
-            Betrachte nun die Durchläufe zu System 1:
+            Betrachte nun einen Durchlauf zu System 2:
 
             \begin{figure}[h!t]
                   \centering
@@ -1380,11 +1378,8 @@ Tag der Einreichung: \datum
             \end{figure}
 
             In Abb. \ref{fig: Plot_2_100_0.05_Mittelpunkt} kann man sehen, dass immer Sprünge auftreten, wenn ein Eigenwert sich einer Intervallgrenze nähert und die Approximation der gewichteten Eigenwertzählung ungenau wird\footnote{siehe auch \cite[\textit{./Verbesserung\_Mittelpunkt.py}]{github}}.
-            Weiterhin wird durch Ausführen des Programms klar, dass sich die Eigenwerte zwischen den Durchläufen von System 2 stark unterscheiden.
-            Diese Instabilität der Minimierung kann nicht verhindert werden.
-            Wir werden nun versuchen, die beobachteten Sprünge zu unterbinden. Nutze dazu eine genauere Quadraturformel.
-
-            Nehme daher als zweites Beispiel die \zitat{Zweipunkt-Formel}\cite[S. 526]{numerikHermann}. Analog zu (\ref{def: JSternTrapez}) und (\ref{def: JSternMittel}) folgt:
+            Wir werden nun versuchen, die beobachteten Sprünge zu unterbinden. Nutze dazu eine genauere Quadraturformel: die \zitat{Zweipunkt-Formel} \cite[S. 526]{numerikHermann}.
+            Analog zu (\ref{def: JSternTrapez}) und (\ref{def: JSternMittel}) folgt:
             \begin{align}
                   J(s) \approx& \frac 1 {2\pi i}\left[\frac{\pi i \Tilde r}{m}\sum_{k=0}^{m-1}\klammer{L(z_{k,-}, s)\exp\klammer{-\frac{\pi i}{\sqrt{3}m}}+L(z_{k,+}, s)\exp\klammer{\frac{\pi i}{\sqrt{3}m}}}\right]\nonumber\\
                   =&: J^*_{\text{Gauss}}(s)
@@ -1435,20 +1430,20 @@ Tag der Einreichung: \datum
             und \ref{tab: Ergebnisse_Gauss2} verringert sich die Anzahl an Iterationen bei erhöhter Anzahl an Stützstellen.
             Man nehme daher für die Minimierung der Eigenwerte in dem restlichen Kapitel immer die Zweipunkt-Formel.
 
-            Die Tatsache, dass diese zwei Quadraturformeln nicht bei $\lam_a$ und $\lam_b$ ausgewertet werden und sie deshalb genauer sind,
+            Die Tatsache, dass diese zwei Quadraturformeln nicht bei $\lam_a$ und $\lam_b$ ausgewertet werden und sie deshalb in Nähe einer Polstelle genauer approximieren,
             kann auch in Programm \textit{./Vergleich Quadraturformeln.py} gesehen werden.
             Dort wurde ebenfalls die verschobene Trapezregel betrachtet, welche die Stützstellen $z_{k+\frac 1 2}$ statt $z_k$ verwendet.
             Allein dies macht einen gewaltigen Unterschied:
 
-            Für eine immer näher an das Kurvenintegral rückende Polstelle wächst die Approximation $J^*_{\text{Trapez}}$ aus (\ref{def: JSternTrapez}) sehr stark an.
-            Alle anderen Quadraturformeln nähern sich stattdessen $0,5$.
+            Für eine immer näher an das Kurvenintegral rückende Polstelle wächst die Approximation durch die Trapezregel aus (\ref{def: JSternTrapez}) sehr stark an.
+            Alle anderen Quadraturformeln nähern sich stattdessen $0.5$.
             Wie auch in den Durchläufen zu System 1 liegen die Ergebnisse der Mittelpunkts-Regel und der Zweipunkt-Formel sehr dicht beieinander.
 
       \section{dynamische Schrittweite}
             Als nächstes wende man sich dem Gradientenverfahren zu:
             Die Schrittweite $\lambda_*$ soll nun nicht mehr fest sein, sondern möglichst optimal berechnet werden.
 
-            Berechne daher $\nabla J^*(s_\text{neu})$ für $s_\text{neu} = s_\text{alt}-d*\lambda_*$\footnote{$d$ wie in Algorithmus \ref{alg: steilster Abstieg}} und entscheide aufgrund dessen, ob:
+            Berechne daher\footnote{mit $d$ wie in Algorithmus \ref{alg: steilster Abstieg}} $\nabla J^*(s_\text{neu})$ für $s_\text{neu} = s_\text{alt}-d\lambda_*$ und entscheide aufgrund dessen, ob:
             \begin{itemize}
                   \item dieser Wert $(s_\text{neu})$ zurückgegeben wird,
                   \item der vorherige Wert $(s_\text{alt})$ zurückgegeben wird oder
@@ -1457,7 +1452,7 @@ Tag der Einreichung: \datum
             
             Offenbar bestimmt $\lambda_*$ nicht mehr direkt die Schrittweite, sie bestimmt aber die Entfernung zweier Punkte $s_\text{neu}$.
 
-            Der Algorithmus zur Bestimmung des neuen Punktes ist in \cite[\textit{./Funktionen.py}]{github} in der Funktion \textit{schrittGradientenverfahren} definiert.
+            Der Algorithmus zur Bestimmung des neuen Punktes ist in \cite[\textit{./Funktionen.py}]{github} in der Funktion \textit{schrittGradientenverfahren()} definiert.
 
             Diese Funktion gibt einen Wert \s aus, der möglichst nahe an der optimalen Stelle bezüglich Richtung $d$ ist.
             Die optimale Stelle würde laut \cite[S. 286]{optimierungBurkhard}
@@ -1468,7 +1463,7 @@ Tag der Einreichung: \datum
             $$|\nabla J(s)\cdot d^T| < 0.00001$$
             ausreichen.
             Es besteht weiterhin die Möglichkeit, dass $s$ die zulässige Menge $\Omega$ verlässt, oder man über einen optimalen Parameter springt.
-            Auch diese Fälle werden in der Funktion \textit{schrittGradientenverfahren} behandelt.
+            Auch diese Fälle werden in der Funktion \textit{schrittGradientenverfahren()} behandelt.
 
             Das Anwenden dieses Algorithmus zur Bestimmung des nächsten Punktes bringt folgende Ergebnisse:
             \begin{table}[!ht]
@@ -1494,13 +1489,14 @@ Tag der Einreichung: \datum
             Wie man sehen kann, wird die Eigenwertzählung bei allen Durchläufen zu System 1 innerhalb eines Schrittes minimiert.
             Dies war aber zu erwarten, da $s$ in System 1 ein Skalar war.
             Sofern die Ableitung hier immer das gleiche Vorzeichen besitzt, gehen auch alle anderen Durchläufe aus Kapitel \ref{sec: Verbesserungen} bei System 1 immer nur in eine Richtung.
-            Somit macht hier das Verfahren in einem Schritt, was vorher in $n$ Schritten gemacht wurde.
+            Somit erreicht hier das Verfahren in einem Schritt, wofür vorher $n$ Schritten benötigt wurden.
 
             Hier benötigt der zweite Durchlauf zu System 2 mehr Schritte als der der vergleichbare Durchlauf aus Tabelle \ref{tab: Ergebnisse_Gauss2} und die Minimierung dauert dabei noch länger,
-            da jeder Schritt des Gradientenverfahrens hier zusätzlich aus Unterschritten (der Bestimmung des optimalen Parameters) besteht.
+            da jeder Schritt des Gradientenverfahrens hier zusätzlich aus Unterschritten (der Bestimmung der optimalen Schrittweite) besteht.
 
             Insgesamt lohnt sich eine dynamische Schrittweite in diesem Problem nicht, da keine einfache Möglichkeit besteht, die optimale Schrittweite zu bestimmen.
-            Für die Bestimmung der optimalen Schrittweite werden hier die Schritte in die Richtung $d$ gegangen, aber schon nach dem ersten Schritt ist diese Richtung im Allgemeinen nicht optimal.
+            Für die Bestimmung der optimalen Schrittweite werden hier die Schritte in die Richtung $d$ gegangen, aber schon nach dem ersten Schritt ist diese Richtung im Allgemeinen nicht mehr optimal.
+            Ein Verfahren ohne dynamsiche Schrittweite würde nun in wieder in die Richtung des steilsten Abstiegs gehen, wohingegen dieses Verfahren solange in Richtung $d$ geht, bis es einen (bezüglich dieser Richtung) optimalen Parameter $s$ erreicht hat.
             Es kommt auch zu keiner Reduktion der Rechendauer, da nach jedem dieser Unterschritte wieder $\nabla J(s)$ bestimmt wird.
 
       \section{Approximation der Ableitung der gewichteten Eigenwertzählung}
@@ -1509,10 +1505,9 @@ Tag der Einreichung: \datum
             hingegen die genaue gewichtete Eigenwertzählung $J(s)$ sehr schnell berechnet werden kann.
             Da aber keine explizite Abhängigkeit vom Design-Parameter $s$ besteht, ist diese Formel nur gut, um als Bedingung für das Ende des Gradientenverfahrens zu dienen.
 
-            Approximiert man aber $\nabla J$ durch die Anwendung eines Differenzenverfahren auf $J(s)$ aus (\ref{def: J original}),
-            wie es in Kapitel \ref{sec: Programmieren} angewendet wurde, um $\frac {dM}{ds}$ zu approximieren,
-            so kann diese Approximation genutzt werden, um die Berechnung von $\nabla J^*(s)$ und damit die Anwendung der Quadraturformel zu umgehen
-            \footnote{man ersetzt also die Ableitung der Approximation von $J$ durch die Approximation der Ableitung von $J$}.
+            Approximiere nun $\nabla J(s)$ durch die Anwendung eines Differenzenverfahrens auf $J(s)$ aus (\ref{def: J original}),
+            wie es in Kapitel \ref{sec: Programmieren} angewendet wurde, um $\frac {dM}{ds}$ zu approximieren.
+            Nun kann diese Approximation genutzt werden, um die Berechnung von $\nabla J^*(s)$ und damit die Anwendung der Quadraturformel zu umgehen\footnote{man ersetzt also die Ableitung der Approximation von $J$ durch die Approximation der Ableitung von $J$}.
 
             Da diese Berechnung sehr viel schneller ist, erhöhe die maximal mögliche Anzahl an Iterationen pro Durchlauf auf 100000.
             Die Anzahl an Teilintervallen wird zwar nicht für die Berechnung an sich benötigt, aber bei jeder Iteration des Gradientenverfahrens wird für den aktuellen Wert des Design-Parameters $s$
@@ -1564,7 +1559,7 @@ Tag der Einreichung: \datum
       Durch eine Substitution in dieser Formel erhält man in (\ref{eqn: allg EW Problem mit lam}) die Formel für die Eigenwerte des Matrix-Pencils $(K-\lambda M)$.
 
       In Kapitel \ref{sec: EW Zählung} wurde die gewichtete Eigenwertzählung auf einem Intervall hergeleitet. Diese Funktion besitzt die Form aus (\ref{def: J original})
-      und ist einfach zu berechnen, hängt aber nicht direkt von dem Design-Parameter Verwendung findet.
+      und ist einfach zu berechnen, hängt aber nicht direkt von dem Design-Parameter ab.
 
       Durch die Identität von Futamura, dem Residuensatz und einer Quadraturformel erhält man in (\ref{def: JSternTrapez}) eine Approximation dieser Eigenwertzählung,
       welche direkt von $s$ abhängt.
@@ -1593,9 +1588,9 @@ Tag der Einreichung: \datum
       Man könnte einerseits ein anderes Minimierungsverfahren nutzen, wie das Newton-Verfahren (siehe \cite[S. 290]{optimierungBurkhard}).
       Für dieses Verfahren bräuchte man zwar die zweite Ableitung von $J$ oder $J^*$, es könnte sich aber positiv auf die Rechenzeit auswirken.
 
-      Zudem könnte man für Systeme mit einer hohen Anzahl an Freiheitsgraden die Spur aus $L(z,s)$, wie es in (\ref{eqn: vollständigeAblL}) vorkommt, approximieren.
+      Zudem könnte man für Systeme mit einer hohen Anzahl an Freiheitsgraden die Spur($\tr$) in (\ref{eqn: vollständigeAblL}) approximieren.
       Man erhofft sich dadurch, die Komplexität der Funktion und ebenso die benötigte Zeit zu verringern (vgl. \cite[S. 128]{grundlageFutamura}).
-      Dazu wäre Hutchinson's Schätzer (vgl. \cite[S. 142]{hutch++Meyer}), oder dessen Erweiterung \zitat{Hutch++}\cite[S. 142]{hutch++Meyer} nützlich.
+      Dazu wäre Hutchinson's Schätzer (vgl. \cite[S. 142]{hutch++Meyer}), oder dessen Erweiterung \zitat{Hutch++} \cite[S. 142]{hutch++Meyer} nützlich.
       Solche Überlegungen könnten in einer weiterführenden Arbeit behandelt und mit den hier erhaltenen Ergebnissen verglichen werden.
 
 \chapter{Verzeichnisse}
